# cuda-based-raytrace

./: .gitignore  CMakeLists.txt  Makefile  README.md  cuda_install_guide.md  default.nix  hello_world.cu  load-modules.sh  main.cu  makefile  notes.md  test_heavy.cu  test_read.py  test_read2.py  test_read3.py
img/: handler.h
src/: consts.cu  consts.h  cuda_error.cpp  cuda_error.h  main.cpp  main.cu
src/gui/: MainWindow.cpp  MainWindow.h  Quad.cpp  Quad.h  Shader.h
src/gui/input/: Widget.cpp  Widget.h  rendererinfo.h
src/hurricanedata/: datareader.cu  datareader.h  fielddata.cu  fielddata.h  filepathmanager.cpp  filepathmanager.h  gpubuffer.cu  gpubuffer.h  gpubufferhandler.cu  gpubufferhandler.h  gpubufferhelper.h  worker.cpp  worker.h
src/illumination/: FrameBuffer.cu  FrameBuffer.h  Raycaster.cu  Raycaster.h  illumination.h  raycaster.h  shading.cu  shading.h  transferFunction.cu  transferFunction.h
src/img/: handler.h
src/linalg/: linalg.h  mat.cu  mat.h  vec.h
src/objs/: sphere.h
src/tests/: a.out  hello_world  hello_world.cu  test_heavy.cu
tests/: deprecated_test.cu
